Correct toggle spacing in header.

--- a/ng-resume-app/src/app/core/components/header/header.component.scss
+++ b/ng-resume-app/src/app/core/components/header/header.component.scss
@@ -14,6 +14,10 @@ $moon-path: 'M21.64 13a1 1 0 0 0-1.05-.14a8.05 8.05 0 0 1-3.37.73a8.15 8.15 0 0 
         }
     }
 
+    .dark-mode-toggle {
+      margin-right: 8px;
+    }
+
     ::ng-deep .dark-mode-toggle .mdc-switch__icon {
         transform: scale(0.8); // This is optional for a better icon fit
       
